@@ -1,0 +1,13 @@
+#ifndef __BROWSERCONFIG_HPP__
+#define __BROWSERCONFIG_HPP__
+
+#include <string>
+
+class BrowserConfig
+{
+public:
+    std::string ircserver;
+};
+
+#endif
+
