@@ -1,3 +1,7 @@
+04-Jan-2003 by Matthias Braun
+-started a new IRC library
+-started a commandline server browser tool
+
 21-Dec-2003 by Matthias Braun
 -rewrote some parts of the UnitList and Unit synchronisation code
 
